# corona-info

./: .gitignore  README.md  com.izzthedude.CoronaInfo.json  coronainfo.py  main.py  meson.build  requirements.txt  setup_unix.sh
coronainfo/: _logger.py  app.py  coronainfo.gresource.xml  coronainfo.in  enums.py  meson.build  settings.py
coronainfo/controllers/: __init__.py  controller_app.py  controller_main.py
coronainfo/models/: __init__.py  model_base.py  model_corona.py
coronainfo/resources/: gresource
coronainfo/resources/ui/: dialog_preferences.ui  help-overlay.ui  window_main.ui
coronainfo/ui/: __init__.py  view_content_main.py  window_main.py
coronainfo/utils/: cache.py  files.py  functions.py  ui_helpers.py  worldometer.py
coronainfo/views/: __init__.py  dialog_about.py  dialog_preferences.py  window_main.py
data/: com.izzthedude.CoronaInfo.appdata.xml.in  com.izzthedude.CoronaInfo.desktop.in  com.izzthedude.CoronaInfo.gresource.xml  com.izzthedude.CoronaInfo.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: help_overlay.ui  view_content_main.ui  view_spinner.ui  window_main.ui
po/: POTFILES  meson.build
src/: coronainfo.py  helpers.py  main.py  models.py
src/corona_info/: helpers.py
src/corona_info/models/: models.py
src/models/: __init__.py  model_corona.py
